--- a/lider-console-antivirus/plugin.xml
+++ b/lider-console-antivirus/plugin.xml
@@ -18,6 +18,11 @@
             id="tr.org.liderahenk.liderconsole.commands.AntivirusTask"            
             name="%command.task">
       </command>
+      <command
+            categoryId="tr.org.liderahenk.liderconsole.commands.category"
+            id="tr.org.liderahenk.liderconsole.commands.AntivirusVersionTask"            
+            name="%command.version.task">
+      </command>
    </extension>
    
    <extension
@@ -26,47 +31,19 @@
 		<!-- Profile handler -->
        	<handler
             class="tr.org.liderahenk.antivirus.handlers.AntivirusProfileHandler"
-            commandId="tr.org.liderahenk.liderconsole.commands.AntivirusProfile">
-           <!-- TODO Uncomment this after updating/fixing LiderSourceProvider -->
-		   <!-- <enabledWhen>
-				<and>
-		          <with
-		                variable="tr.org.liderahenk.liderconsole.core.sourceproviders.main.available">
-		             <equals
-		                   value="true">
-		             </equals>
-		          </with>
-				<with
-	                variable="tr.org.liderahenk.liderconsole.core.sourceproviders.main.isAhenkSelected">
-	             	<equals
-		                   value="true">
-		            </equals>
-	          	</with>
-		       </and>
-		    </enabledWhen> -->        
+            commandId="tr.org.liderahenk.liderconsole.commands.AntivirusProfile"> 
       	</handler>
       	
       	<!-- Task handler -->
        <handler
             class="tr.org.liderahenk.antivirus.handlers.AntivirusTaskHandler"
             commandId="tr.org.liderahenk.liderconsole.commands.AntivirusTask">
-           <!-- TODO Uncomment this after updating/fixing LiderSourceProvider -->
-		   <!-- <enabledWhen>
-				<and>
-		          <with
-		                variable="tr.org.liderahenk.liderconsole.core.sourceproviders.main.available">
-		             <equals
-		                   value="true">
-		             </equals>
-		          </with>
-				<with
-	                variable="tr.org.liderahenk.liderconsole.core.sourceproviders.main.isAhenkSelected">
-	             	<equals
-		                   value="true">
-		            </equals>
-	          	</with>
-		       </and>
-		    </enabledWhen> -->        
+      </handler>
+      	
+      	<!-- Task handler -->
+       <handler
+            class="tr.org.liderahenk.antivirus.handlers.AntivirusVersionTaskHandler"
+            commandId="tr.org.liderahenk.liderconsole.commands.AntivirusVersionTask">
       </handler>
       
   </extension>
@@ -81,33 +58,6 @@
                   commandId="tr.org.liderahenk.liderconsole.commands.AntivirusProfile"
                   id="tr.org.liderahenk.liderconsole.commands.AntivirusProfile"
                   tooltip="%command.profile">
-                  <!-- TODO Uncomment this after updating/fixing LiderSourceProvider -->
-				  <!-- <visibleWhen>
-					   <and>
-			                <iterate operator="or">		
-			                	<or>
-							  	<with
-					                variable="tr.org.liderahenk.liderconsole.core.sourceproviders.main.isSearchSelected">
-						             <equals
-						                   value="true">
-						             </equals>
-					          	</with>
-					          	<with
-					                variable="tr.org.liderahenk.liderconsole.core.sourceproviders.main.isEntrySelected">
-						             <equals
-						                   value="true">
-						             </equals>
-					          	</with>
-					        	</or>
-					        </iterate>
-							<with
-				                variable="tr.org.liderahenk.liderconsole.core.sourceproviders.main.isAhenkSelected">
-				             	<equals
-					                   value="true">
-					            </equals>
-				          	</with>
-					    </and>
-					</visibleWhen> -->               
            		</command>
 		</menuContribution>
       
@@ -119,33 +69,17 @@
                   commandId="tr.org.liderahenk.liderconsole.commands.AntivirusTask"
                   id="tr.org.liderahenk.liderconsole.commands.AntivirusTask"
                   tooltip="%command.task">
-                  <!-- TODO Uncomment this after updating/fixing LiderSourceProvider -->
-				  <!-- <visibleWhen>
-					   <and>
-			                <iterate operator="or">		
-			                	<or>
-							  	<with
-					                variable="tr.org.liderahenk.liderconsole.core.sourceproviders.main.isSearchSelected">
-						             <equals
-						                   value="true">
-						             </equals>
-					          	</with>
-					          	<with
-					                variable="tr.org.liderahenk.liderconsole.core.sourceproviders.main.isEntrySelected">
-						             <equals
-						                   value="true">
-						             </equals>
-					          	</with>
-					        	</or>
-					        </iterate>
-							<with
-				                variable="tr.org.liderahenk.liderconsole.core.sourceproviders.main.isAhenkSelected">
-				             	<equals
-					                   value="true">
-					            </equals>
-				          	</with>
-					    </and>
-					</visibleWhen> -->               
+           		</command>
+		</menuContribution>
+      
+      	<!-- Add extension point contribution for "task execution" dialogs -->
+		<menuContribution
+      		allPopups="false"
+            locationURI="popup:tr.org.liderahenk.liderconsole.menus.ApplyTask?after=additions">
+ 				<command
+                  commandId="tr.org.liderahenk.liderconsole.commands.AntivirusVersionTask"
+                  id="tr.org.liderahenk.liderconsole.commands.AntivirusVersionTask"
+                  tooltip="%command.version.task">
            		</command>
 		</menuContribution>
   </extension>
