--- a/lider-console-antivirus/plugin.xml
+++ b/lider-console-antivirus/plugin.xml
@@ -121,7 +121,12 @@
            		</command>
 		</menuContribution>
   </extension>
-  
+  	<extension
+         point="tr.org.liderahenk.liderconsole.core.i18n">
+         <task code="INSTANT_SCAN" label="%command.task" />
+         <task code="ANTIVIRUS_VERSION" label="%command.version.task" />
+        <plugin name="antivirus" label="%plugin.label" />
+     </extension>
 	<!-- Add extension point contribution for "policy execution" dialogs -->
 	<extension
   		point="tr.org.liderahenk.liderconsole.core.policymenu">
