--- a/lider-antivirus/src/main/resources/tr.org.liderahenk.antivirus.cfg
+++ b/lider-antivirus/src/main/resources/tr.org.liderahenk.antivirus.cfg
@@ -1,6 +1,6 @@
 # Plugin definition
 plugin.name = antivirus
-plugin.version = 1.0.0
+plugin.version = 1.0.0-beta
 plugin.description = Lider Ahenk antivirus plugin
 plugin.machine.oriented = false
 plugin.user.oriented = false
