--- a/lider-console-antivirus/plugin.xml
+++ b/lider-console-antivirus/plugin.xml
@@ -199,15 +199,21 @@
   		<policyItem label="%command.profile" pluginName="antivirus" pluginVersion="1.0.0" profileCommandId="tr.org.liderahenk.liderconsole.commands.AntivirusProfile" />
   	</extension>
   	
+  		<!-- Add extension point contribution for "task execution" dialogs -->
   	
   	<extension
   		point="tr.org.liderahenk.liderconsole.core.taskmenu">
-  		<taskItem label="%command.task" pluginName="antivirus" pluginVersion="1.0.0" taskCommandId="tr.org.liderahenk.liderconsole.commands.AntivirusTask" />
+  		<taskItem label="%command.task" pluginName="antivirus" pluginVersion="1.0.0" taskCommandId="tr.org.liderahenk.liderconsole.commands.AntivirusTask" selectionType="multi" description="Ahenk makinesinde/lerinde anlık olarak virüs taraması yapmasını sağlamaktadır.&#xA;Anlık tarama yapmak için tıklayınız.."/>
   	</extension>
   	
   	<extension
   		point="tr.org.liderahenk.liderconsole.core.taskmenu">
-  		<taskItem label="%command.configuration.task" pluginName="antivirus" pluginVersion="1.0.0" taskCommandId="tr.org.liderahenk.liderconsole.commands.AntivirusConfigurationTask" />
+  		<taskItem label="%command.configuration.task" pluginName="antivirus" pluginVersion="1.0.0" taskCommandId="tr.org.liderahenk.liderconsole.commands.AntivirusConfigurationTask" description="Clamav antivirüs programının konfigürasyonunu düzenlemeyi sağlayan eklentidir.&#xA;Konfigürasyonu düzenlemek için tıklayınız.."/>
+  	</extension>
+  	
+  		<extension
+  		point="tr.org.liderahenk.liderconsole.core.taskmenu">
+  		<taskItem label="%command.version.task" pluginName="antivirus" pluginVersion="1.0.0" taskCommandId="tr.org.liderahenk.liderconsole.commands.AntivirusVersionTask" description="Ahenk makinesi üzerinde çalışmakta olan 'clamav' antivirüs programının mevcut sürümü hakkında bilgi vermektedir.&#xA;Antivirüs sürümü hakkında bilgi almak için tıklayınız.." />
   	</extension>
   	
 </plugin>
